WARNING: Lots of changes; please test this before deploying in a production setting.  A lot of the job running plumbing has been reworked.  This should fix #9, #10, #7 and #1.  Please report any bugs!

--- a/README
+++ b/README
@@ -13,5 +13,7 @@ you can add jobs.
 Installation and Usage
 ======================
 
-Read docs/overview.txt for more information, or build the documentation with
-Sphinx.
+Read docs/overview.txt for more information, build the documentation with
+Sphinx or view them online here_.
+
+.. _here: http://readthedocs.org/docs/django-chronograph/en/latest/overview.html
