--- a/README
+++ b/README
@@ -3,12 +3,17 @@
 Chronograph
 ===========
 
-Control django-admin commands via the web.
+Control ``django-admin`` commands via the web.
 
 Creating cron jobs for Django apps can be a pain, annoying and repetitive. With
-django-chronograph you simply create a single cron job to run every minute,
-point it at your site's directory and run manage.py cron. Then from the admin
+``django-chronograph`` you simply create a single cron job to run every minute,
+point it at your site's directory and run ``manage.py cron``. Then from the admin
 you can add jobs.
+
+
+.. Note::
+
+	``django-chronograph`` supports Django 1.1+.
 
 Installation and Usage
 ======================
